--- a/35 cafe/style.css
+++ b/35 cafe/style.css
@@ -233,6 +233,7 @@ body {
   #menu_img{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   #food{
@@ -361,8 +362,19 @@ body {
     border-bottom: solid 2px;
   }
 
-  .map{
-    padding-left: 200px;
+  .map {
+    position: relative;
+    width: 50%;
+    height: 0;
+    padding-top: 30%;
+  }
+   
+  .map iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 
   /*footer*/
@@ -795,8 +807,19 @@ body {
     border-bottom: solid 2px;
   }
   
-  .map{
-    padding-left: 50px;
+  .map {
+    position: relative;
+    width: 50%;
+    height: 0;
+    padding-top: 30%;
+  }
+   
+  .map iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 
   /*footer*/
@@ -1197,9 +1220,21 @@ body {
     border-bottom: solid 2px;
   }
   
-  .map{
-    padding-left: 50px;
+  .map {
+    position: relative;
+    width: 50%;
+    height: 0;
+    padding-top: 30%;
   }
+   
+  .map iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
 
   /*footer*/
   footer{
